<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE">

        <RelativeLayout
            android:id="@+id/rl_pic_top"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/fl_back"
                android:layout_width="100dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_top_back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/controller_media_video_top_back_selector"
                    tools:ignore="ContentDescription" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/controller_medialib_selectpage_pic"
                android:textColor="#010101"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_bulk_operation_top"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintBottom_toTopOf="@+id/rl_recycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_pic_top">

            <LinearLayout
                android:id="@+id/ll_pic_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="52dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/controller_medialib_selectpage_all"
                    android:textColor="#000000"
                    android:textSize="13.33sp" />

                <View
                    android:id="@+id/view_pic_select_all"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="2dp"
                    android:background="#000000" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_video_select_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="28.67dp"
                android:layout_toRightOf="@+id/ll_pic_select_all"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap,RtlHardcoded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/controller_medialib_selectpage_mark"
                    android:textColor="#000000"
                    android:textSize="13.33sp" />

                <View
                    android:id="@+id/view_pic_select_mark"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="2dp"
                    android:background="#000000" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_pic_bulk_operation"
                android:layout_width="116dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="36dp"
                android:background="@drawable/controller_media_bulk_operation_selector">

                <ImageView
                    android:layout_width="13.33dp"
                    android:layout_height="13.33dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/controller_media_bulk_operation"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="19dp"
                    android:text="@string/controller_medialib_selectpage_bulk_operation"
                    android:textColor="#000000"
                    android:textSize="13.33sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_bulk_operation_top">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp"
                android:layout_marginStart="36.33dp"
                android:layout_marginEnd="36.33dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_bulk_operation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#D4D4D4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:id="@+id/rl_bulk_operation_mark"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="72dp"
                android:layout_toLeftOf="@+id/rl_bulk_operation_delete"
                tools:ignore="RelativeOverlap,RtlHardcoded">

                <ImageView
                    android:id="@+id/iv_bulk_operation_mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/controller_media_bulk_operation_mark_selector"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_bulk_operation_mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_bulk_operation_mark"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/controller_medialib_selectpage_bulk_operation_mark_cancel"
                    android:textColor="#404040"
                    android:textSize="9.33sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_bulk_operation_delete"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/iv_bulk_operation_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/controller_media_bulk_operation_delete"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_bulk_operation_delete"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/controller_medialib_selectpage_bulk_operation_delete"
                    android:textColor="#404040"
                    android:textSize="9.33sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_bulk_operation_all"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="72dp"
                android:layout_toRightOf="@+id/rl_bulk_operation_delete"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:id="@+id/iv_bulk_operation_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/controller_media_bulk_operation_all_selector"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_bulk_operation_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_bulk_operation_all"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/controller_medialib_selectpage_bulk_operation_all"
                    android:textColor="#404040"
                    android:textSize="9.33sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/play_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>